--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,8 @@
-html, body {
+html, body, .everything, .home, .about,.homeDiscoveries, iframe, .resources {
     width:100%;
     height:100%;
 }
 
-.everything {
-    width:100%;
-    height:100%;
-}
 #landing {
         display: table;
         width: 100%;
@@ -31,4 +27,8 @@ h1 {
 
 h2 {
     font-size: 20px;
+}
+
+.nav-link {
+    cursor: pointer;
 }
